cluster/apps/charts/spliit/spliit-deployment.yaml

# Example chart: https://github.com/dixneuf19/brassberry-gitops/blob/main/spliit/spliit/values.yaml
#                https://github.com/dixneuf19/brassberry-gitops/blob/main/spliit/spliit/templates/manifests.yaml

--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spliit
  name: spliit
#  namespace: spliit
spec:
  selector:
    matchLabels:
      app: spliit
  template:
    metadata:
      labels:
        app: spliit
        app.kubernetes.io/name: spliit # required for Homepage
    spec:
      containers:
        - name: spliit
          # https://github.com/spliit-app/spliit/pkgs/container/spliit 
          image: ghcr.io/spliit-app/spliit:1.18.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: spliit-http
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
            limits:
              cpu: "1000m"
              memory: "2000Mi"
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: http
          readinessProbe:
            httpGet:
             path: /api/health/readiness
             port: http
          startupProbe:
            httpGet:
              path: /api/health/readiness
              port: http
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: spliit-http-svc
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: spliit-http
  selector:
    app: spliit
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #acme.cert-manager.io/http01-ingress-class: nginx-external
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    #acme.cert-manager.io/http01-ingress-class: "nginx-external"
    #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    #nginx.org/ssl-services: "tvheadend-http-svc"
    nginx.org/websocket-services: "spliit-http-svc"        
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600" 
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # allow uploads (aka backups) of up to 100MB
    gethomepage.dev/description: spliit
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Utils
    gethomepage.dev/icon: https://raw.githubusercontent.com/Lurkars/spliitsecretariat/refs/heads/main/src/assets/icons/icon-72x72.png
    gethomepage.dev/name: spliit

  name: spliit
spec:
  rules:
    - host: spliit.rockyroad.rocks
      http:
        paths:
          - backend:
              service:
                name: spliit-http-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - spliit.rockyroad.rocks
      secretName: spliit-tls
---
